--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,8 +5,19 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimaryDark">@color/colorSplash</item>
         <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="ToolBar" parent="ThemeOverlay.AppCompat.Light">
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:textColorSecondary">@android:color/white</item>
+        <item name="android:background">@color/colorSplash</item>
+    </style>
+
+    <style name="Popup" parent="ThemeOverlay.AppCompat.Light">
+        <item name="android:background">@color/colorSplash</item>
+        <item name="android:textColor">@color/colorWhite</item>
     </style>
 
 </resources>
