--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,20 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="@color/colorSplash"
     android:gravity="center"
-    android:background="@color/colorParrot"
+    android:orientation="vertical"
     tools:context=".SplashActivity">
 
     <ImageView
-        android:layout_height="wrap_content"
+        android:id="@+id/imglogo"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|center_vertical"
-        android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:id="@+id/imglogo"
+        android:layout_marginTop="20dp"
         android:src="@mipmap/main_logo"/>
 
 
