--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    //splash screen background color
-    <color name="colorParrot">#329b0d</color>
+    //splash screen background color and appbar color
+    <color name="colorSplash">#329b0d</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
