--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorIndicater">#ecd95a</color>
+    <color name="colorIndicater">#ffff00</color>
+    <color name="colorIndicaterTab">#000000</color>
 
     <!--splash screen background color and appbar color-->
     <color name="colorSplash">#329b0d</color>
