--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -28,14 +28,17 @@
             android:orientation="vertical"></FrameLayout>
 
         <android.support.design.widget.NavigationView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/nav_view"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:fitsSystemWindows="true"
             app:headerLayout="@layout/nav_header_navigation"
-            app:menu="@menu/activity_navigation_drawer" />
-
+            app:menu="@menu/activity_navigation_drawer"
+            app:itemTextColor="#000000"
+            android:layout_marginTop="-24dp"/>
     </android.support.v4.widget.DrawerLayout>
 
 </LinearLayout>
