--- a/app/src/main/res/layout/nav_header_navigation.xml
+++ b/app/src/main/res/layout/nav_header_navigation.xml
@@ -17,6 +17,6 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="2dp"
         android:layout_marginTop="2dp"
-        android:src="@mipmap/main_logo"/>
+        android:src="@drawable/main_logo"/>
 
 </LinearLayout>
