--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_login"
-        android:icon="@mipmap/login"
+        android:icon="@drawable/login"
         android:orderInCategory="300"
         android:title="User"
         app:showAsAction="ifRoom"></item>
