--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -4,43 +4,43 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/navHome"
-            android:icon="@drawable/home_nav"
+            android:icon="@mipmap/home_nav"
             android:title="@string/navHome" />
         <item
             android:id="@+id/navAboutUs"
-            android:icon="@drawable/about_nav"
+            android:icon="@mipmap/about_nav"
             android:title="@string/navAboutUs" />
         <item
             android:id="@+id/navHealth"
-            android:icon="@drawable/health_nav"
+            android:icon="@mipmap/health_nav"
             android:title="@string/navHealth" />
         <item
             android:id="@+id/navPlant"
-            android:icon="@drawable/plant_nav"
+            android:icon="@mipmap/plant_nav"
             android:title="@string/navPlant" />
 
         <item
             android:id="@+id/navGallery"
-            android:icon="@drawable/galleries_nav"
+            android:icon="@mipmap/galleries_nav"
             android:title="@string/navGallery" />
         <item
             android:id="@+id/navWaRev"
-            android:icon="@drawable/wage_nav"
+            android:icon="@mipmap/wage_nav"
             android:title="@string/navWaRev" />
 
         <item
             android:id="@+id/navGrav"
-            android:icon="@drawable/ic_menu_send"
+            android:icon="@mipmap/circlular_nav"
             android:title="@string/navGrav" />
 
         <item
             android:id="@+id/navCir"
-            android:icon="@drawable/circlular_nav"
+            android:icon="@mipmap/circlular_nav"
             android:title="@string/navCir" />
 
         <item
             android:id="@+id/navLogin"
-            android:icon="@drawable/login_nav"
+            android:icon="@mipmap/login_nav"
             android:title="@string/navLogin" />
 
     </group>
