--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,18 +9,18 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="ToolBar.AppTheme" parent="ThemeOverlay.AppCompat.Light">
+    <style name="ToolBar" parent="ThemeOverlay.AppCompat.Light">
         <item name="android:textColorPrimary">@android:color/white</item>
         <item name="android:textColorSecondary">@android:color/white</item>
         <item name="android:background">@color/colorSplash</item>
     </style>
 
-    <style name="Popup.AppTheme" parent="ThemeOverlay.AppCompat.Light">
+    <style name="Popup" parent="ThemeOverlay.AppCompat.Light">
         <item name="android:background">@color/colorSplash</item>
         <item name="android:textColor">@color/colorWhite</item>
     </style>
 
-  <!--  <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+  <!--<style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />-->
 
