--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -40,7 +40,7 @@
 
         <item
             android:id="@+id/navLogin"
-            android:icon="@mipmap/login_nav"
+            android:icon="@mipmap/login_nav_black"
             android:title="@string/navLogin" />
 
     </group>
