--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,12 +14,13 @@
         <item name="android:textColorPrimary">@android:color/white</item>
         <item name="android:textColorSecondary">@android:color/white</item>
         <item name="android:background">@color/colorSplash</item>
+        <item name="drawerArrowStyle">@style/DrawerIcon</item>
     </style>
 
     <style name="Popup" parent="ThemeOverlay.AppCompat.Light">
         <item name="android:background">@color/colorSplash</item>
         <item name="android:textColor">@color/colorWhite</item>
-
+        <item name="drawerArrowStyle">@style/DrawerIcon</item>
     </style>
 
   <!--<style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
