--- a/app/src/main/res/layout/fragment_hospital_detail.xml
+++ b/app/src/main/res/layout/fragment_hospital_detail.xml
@@ -8,7 +8,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvDisplay"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="@color/colorWhite"
         android:paddingTop="10dp">
 
