--- a/app/src/main/res/layout/wage_cardview.xml
+++ b/app/src/main/res/layout/wage_cardview.xml
@@ -8,7 +8,7 @@
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/wagecard_view"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
@@ -20,10 +20,9 @@
         card_view:elevation="14dp">
 
         <com.rey.material.widget.TextView
-            android:id="@+id/txtName"
+            android:id="@+id/person_name"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="hello"
+            android:layout_height="wrap_content"
             android:textColor="@color/colorName"
             android:textSize="25sp"
             android:textStyle="normal">
