--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="colorNav">#616161</color>
 
     <color name="Colornavheader">#3CBE10</color>
+    <color name="Colorloginbutton">#7bd55b</color>
 </resources>
