--- a/app/src/main/res/layout/circular_cardview.xml
+++ b/app/src/main/res/layout/circular_cardview.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/wagecard_view"
@@ -18,20 +18,27 @@
         card_view:cardCornerRadius="4dp"
         card_view:elevation="14dp">
 
-        <com.rey.material.widget.TextView
-            android:id="@+id/txtName"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="hello"
-            android:textColor="@color/colorName"
-            android:textSize="25sp"
-            android:textStyle="normal"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-        </com.rey.material.widget.TextView>
+            <com.rey.material.widget.TextView
+                android:id="@+id/txtName"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/colorName"
+                android:textSize="25sp"
+                android:textStyle="normal">
+
+            </com.rey.material.widget.TextView>
+
+        </LinearLayout>
+
 
     </android.support.v7.widget.CardView>
 </LinearLayout>
