--- a/app/src/main/res/layout/wage_cardview.xml
+++ b/app/src/main/res/layout/wage_cardview.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/wagecard_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
@@ -17,19 +17,30 @@
         android:background="@color/colorWhite"
         card_view:cardBackgroundColor="@color/colorWhite"
         card_view:cardCornerRadius="4dp"
-        card_view:elevation="14dp">
+        card_view:elevation="10dp">
 
-        <com.rey.material.widget.TextView
-            android:id="@+id/person_name"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorName"
-            android:textSize="25sp"
-            android:textStyle="normal">
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-        </com.rey.material.widget.TextView>
+            <com.rey.material.widget.TextView
+                android:id="@+id/person_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/colorName"
+                android:textSize="25sp"
+                android:textStyle="normal">
+
+            </com.rey.material.widget.TextView>
+
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
-
 
 </LinearLayout>
