--- a/app/src/main/res/layout/raw_dashboardinfo.xml
+++ b/app/src/main/res/layout/raw_dashboardinfo.xml
@@ -1,19 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <com.rey.material.widget.TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textlink"
-        android:text="abclink"
-        android:textColor="@color/colorName"
-        android:inputType="textMultiLine"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="10dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/dashboardcard_view"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_weight="4"/>
+        android:layout_marginTop="10dp"
+        android:background="@color/colorWhite"
+        card_view:cardBackgroundColor="@color/colorWhite"
+        card_view:cardCornerRadius="4dp"
+        card_view:elevation="10dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1">
+
+            <com.rey.material.widget.TextView
+                android:id="@+id/textlink"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="15dp"
+                android:inputType="textMultiLine"
+                android:textColor="@color/colorName"
+                android:textSize="20sp"
+                android:textStyle="normal" />
+        </LinearLayout>
+
+
+    </android.support.v7.widget.CardView>
 </LinearLayout>
