--- a/app/src/main/res/layout/raw_hospital_info.xml
+++ b/app/src/main/res/layout/raw_hospital_info.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -63,7 +63,6 @@
                     android:layout_marginRight="10dp"
                     android:layout_marginTop="5dp"
                     android:inputType="textMultiLine"
-                    android:text="@string/txtaddress"
                     android:textColor="@color/colorName"
                     android:textStyle="bold"></com.rey.material.widget.TextView>
             </LinearLayout>
@@ -92,7 +91,6 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginTop="5dp"
-                    android:text="abc@gmail.com"
                     android:textColor="@color/colorName"
                     android:textStyle="bold"></com.rey.material.widget.TextView>
             </LinearLayout>
@@ -121,7 +119,6 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginTop="5dp"
-                    android:text="9988767876"
                     android:textColor="@color/colorName"
                     android:textStyle="bold"></com.rey.material.widget.TextView>
             </LinearLayout>
