--- a/app/src/main/res/layout/raw_dashboardinfo.xml
+++ b/app/src/main/res/layout/raw_dashboardinfo.xml
@@ -20,17 +20,17 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:orientation="vertical">
 
             <com.rey.material.widget.TextView
                 android:id="@+id/textlink"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginTop="10dp"
                 android:inputType="textMultiLine"
                 android:textColor="@color/colorName"
                 android:textSize="20sp"
