--- a/app/src/main/res/layout/raw_panel_wise_doctor_detail.xml
+++ b/app/src/main/res/layout/raw_panel_wise_doctor_detail.xml
@@ -24,47 +24,55 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <HorizontalScrollView
+            <LinearLayout
+                android:id="@+id/scroll"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:scrollbars="none">
+                android:orientation="horizontal">
 
-                <LinearLayout
-                    android:id="@+id/childLayout"
+                <HorizontalScrollView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:scrollbars="none">
 
-                    <com.rey.material.widget.TextView
-                        android:id="@+id/tvHospitalName"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:id="@+id/childLayout"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="5dp"
-                        android:layout_marginLeft="2dp"
-                        android:layout_marginRight="2dp"
-                        android:layout_marginTop="5dp"
-                        android:background="@color/Colorloginbutton"
-                        android:text="@string/txtPersonName"
-                        android:textColor="@color/colorName"
-                        android:textSize="15sp"
-                        android:textStyle="bold"></com.rey.material.widget.TextView>
+                        android:orientation="horizontal">
 
-                    <com.rey.material.widget.TextView
-                        android:id="@+id/txtHospitalName"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="5dp"
-                        android:layout_marginLeft="2dp"
-                        android:layout_marginRight="2dp"
-                        android:layout_marginTop="5dp"
-                        android:background="@color/Colorloginbutton"
-                        android:text="Jahangir Hospital"
-                        android:textColor="@color/colorName"
-                        android:textSize="15sp"
-                        android:textStyle="bold"></com.rey.material.widget.TextView>
+                        <com.rey.material.widget.TextView
+                            android:id="@+id/tvHospitalName"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="5dp"
+                            android:layout_marginLeft="2dp"
+                            android:layout_marginRight="2dp"
+                            android:layout_marginTop="5dp"
+                            android:background="@color/Colorloginbutton"
+                            android:text="@string/txtPersonName"
+                            android:textColor="@color/colorName"
+                            android:textSize="15sp"
+                            android:textStyle="bold"></com.rey.material.widget.TextView>
 
-                </LinearLayout>
-            </HorizontalScrollView>
+                        <com.rey.material.widget.TextView
+                            android:id="@+id/txtHospitalName"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="5dp"
+                            android:layout_marginLeft="2dp"
+                            android:layout_marginRight="2dp"
+                            android:layout_marginTop="5dp"
+                            android:background="@color/Colorloginbutton"
+                            android:text="Jahangir Hospital"
+                            android:textColor="@color/colorName"
+                            android:textSize="15sp"
+                            android:textStyle="bold"></com.rey.material.widget.TextView>
+
+                    </LinearLayout>
+                </HorizontalScrollView>
+
+            </LinearLayout>
 
 
             <LinearLayout
